--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Verified System with Deposit Page</title>
+<title>Verified System - Responsive</title>
 <style>
 body { font-family: 'Segoe UI', sans-serif; background: #f4f6f9; margin:0; padding:0; }
 header { background: #2e7d32; color: white; padding: 15px; text-align: center; font-size: 20px; box-shadow: 0 2px 5px rgba(0,0,0,0.2);}
@@ -15,7 +15,7 @@ button:hover { opacity: 0.85; }
 .btn-primary { background: #43a047; color: white; }
 .btn-secondary { background: #1e88e5; color: white; }
 .btn-admin { background: #e53935; color: white; }
-input, select { width: 100%; padding: 10px; margin: 5px 0 15px 0; border-radius: 6px; border: 1px solid #ccc; box-sizing: border-box; }
+input, select { width: 100%; padding: 10px; margin: 5px 0 15px 0; border-radius: 6px; border: 1px solid #ccc; box-sizing: border-box; font-size:16px; }
 .table-container { overflow-x: auto; }
 table { width: 100%; border-collapse: collapse; min-width: 400px; }
 th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
@@ -26,6 +26,44 @@ th { background-color: #f2f2f2; }
 .tooltip:hover::after { content: attr(data-tip); position: absolute; left: 0; top: 25px; background: #333; color: white; padding: 5px 8px; border-radius: 5px; font-size: 12px; white-space: nowrap; }
 .balance-green { color: #43a047; font-weight:bold; }
 .bonus-blue { color: #1e88e5; font-weight:bold; }
+
+@media screen and (max-width: 600px){
+  header { font-size: 18px; }
+  button { width: 100%; font-size:16px; }
+  input, select { font-size:16px; }
+}
+
+/* Modal Styles */
+#depositPage {
+  display: none;
+  position: fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background: rgba(0,0,0,0.7);
+  justify-content: center;
+  align-items: center;
+  animation: fadeIn 0.3s ease;
+  z-index: 999;
+}
+
+#depositModal {
+  background:white;
+  padding:20px;
+  border-radius:12px;
+  max-width:400px;
+  width:90%;
+  text-align:center;
+  transform: scale(0.8);
+  animation: scaleUp 0.3s forwards;
+}
+
+@keyframes fadeIn{
+  from{opacity:0;} to{opacity:1;}
+}
+
+@keyframes scaleUp{
+  from{transform: scale(0.8);} to{transform: scale(1);}
+}
 </style>
 </head>
 <body>
@@ -36,7 +74,7 @@ th { background-color: #f2f2f2; }
 <!-- Balance -->
 <div class="section">
 <h3>Your Balance: <span id="balance" class="balance-green">0</span> Taka</h3>
-<p>Daily Income: <span class="bonus-blue">40</span> Taka</p>
+<p>Daily Income: <span class="bonus-blue">20% of Deposit</span></p>
 <div class="progress-bar">
 <div id="dailyProgress" class="progress"></div>
 </div>
@@ -132,15 +170,17 @@ th { background-color: #f2f2f2; }
 
 </div>
 
-<!-- Deposit Page Modal -->
-<div id="depositPage" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:white; padding:20px; overflow:auto;">
+<!-- Deposit Modal -->
+<div id="depositPage" class="flex" style="display:flex; align-items:center; justify-content:center;">
+<div id="depositModal">
 <h3>Send Money to 01956715958 via bKash/Nagad</h3>
 <p>Amount: <span id="depositAmountDisplay"></span> Taka</p>
 <label>Enter Transaction ID</label>
 <input type="text" id="trxId" placeholder="Enter Transaction ID">
-<button onclick="verifyDepositPage()">Submit</button>
-<button style="background:#e53935; margin-top:10px;" onclick="closeDepositPage()">Close</button>
+<button class="btn-primary" onclick="verifyDepositPage()">Submit</button>
+<button class="btn-admin" style="margin-top:10px;" onclick="closeDepositPage()">Close</button>
 <p id="depositMsg" style="color:green;"></p>
+</div>
 </div>
 
 <script>
@@ -227,90 +267,4 @@ document.getElementById('checkinProgress').style.width = user.lastCheckin===new 
 
 // User Actions
 function claimDailyIncome(){
-if(user.dailyClaimed){ alert("Daily income already claimed!"); return; }
-user.balance+=40;
-user.dailyClaimed=true;
-usersDB[user.refCode].balance=user.balance;
-addTransaction(user.refCode,'Daily Income',40,'Claimed daily income');
-alert("40 Taka added as daily income!");
-updateBalance();
-}
-
-function claimCheckinBonus(){
-let today = new Date().toDateString();
-if(user.lastCheckin===today){ alert("Already claimed today!"); return; }
-if(user.balance>0){
-let bonus = user.balance*0.10;
-user.balance+=bonus;
-usersDB[user.refCode].balance=user.balance;
-addTransaction(user.refCode,'Check-in Bonus',bonus,'10% of balance');
-user.lastCheckin=today;
-alert(`10% check-in bonus claimed: ${bonus.toFixed(2)} Taka`);
-} else { alert("Make deposit first"); }
-updateBalance();
-}
-
-function copyRef(){
-let refInput=document.getElementById('refLink');
-refInput.select();
-refInput.setSelectionRange(0,99999);
-document.execCommand("copy");
-alert("Referral link copied!");
-}
-
-// Admin
-function addBalance(){
-let ref=document.getElementById('adminRefCode').value.trim();
-let amount=parseFloat(document.getElementById('adminAmount').value);
-if(!ref||isNaN(amount)||amount<=0){ alert("Enter valid ref code and amount"); return; }
-if(!usersDB[ref]) usersDB[ref]={ balance:0, refBonus:0, referrals:0, firstDepositDone:false };
-usersDB[ref].balance+=amount;
-addTransaction(ref,'Admin Added',amount,'Admin credited balance');
-alert(`Added ${amount.toFixed(2)} Taka to ${ref}`);
-document.getElementById('adminRefCode').value='';
-document.getElementById('adminAmount').value='';
-updateBalance();
-}
-
-// Deposit Page
-function openDepositPage(){
-document.getElementById('depositPage').style.display='block';
-let amount = parseFloat(document.getElementById('depositAmount').value);
-document.getElementById('depositAmountDisplay').innerText = amount.toFixed(2);
-}
-
-function closeDepositPage(){
-document.getElementById('depositPage').style.display='none';
-document.getElementById('trxId').value='';
-document.getElementById('depositMsg').innerText='';
-}
-
-function verifyDepositPage(){
-let trx = document.getElementById('trxId').value.trim();
-if(!trx){ alert("Enter Transaction ID"); return; }
-let amount = parseFloat(document.getElementById('depositAmount').value);
-
-// Update balance
-user.balance+=amount;
-usersDB[user.refCode].balance=user.balance;
-addTransaction(user.refCode,'Deposit',amount,'Verified with TXID: '+trx);
-
-// Referral bonus
-if(user.firstDepositDone===false && user.referredBy){
-let bonus = amount*0.2;
-if(!usersDB[user.referredBy]) usersDB[user.referredBy]={ balance:0, refBonus:0, referrals:0 };
-usersDB[user.referredBy].refBonus+=bonus;
-usersDB[user.referredBy].referrals+=1;
-addTransaction(user.referredBy,'Referral Bonus',bonus,'From '+user.refCode);
-user.firstDepositDone=true;
-}
-
-document.getElementById('depositMsg').innerText=`Deposit verified! ${amount} Taka added.`;
-document.getElementById('trxId').value='';
-updateBalance();
-}
-
-updateBalance();
-</script>
-</body>
-</html>
+if(user.dailyClaimed){ alert("Daily income already claimed!");
